Fix the layout problem on page 11, try the drawer component

--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,25 @@
 img {
     max-width: 100%;
 }
+
 @media screen and (min-width: 480px) {
     img {
         align-items: center;
         max-width: 100%;
+    
+    } 
+    .flex-grid {
+        display: flex;
+        flex-direction: row;
     }
 }
 @media screen and (max-width: 480px) {
     h1 {
     font-size: 20px;
     }
+   
     .flex-grid {
-    display: block;
+        flex-direction: column;
     }
 }
 body{
